--- a/enquiry.html
+++ b/enquiry.html
@@ -1,11 +1,34 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
+    <head>
+            <meta charset="utf-8">
+            <title>Enquiry</title>
+            <link rel="stylesheet" type="text/css" href="styles/style.css" >
+            <link rel="icon" href="">
+    </head>
+    <body>
+    <header>
+        <nav>
+            <a href="index.html"><img src="images" alt="HypeCenter logo"/></a>
 
-<head>
-<meta charset= "utf-8">
-</head>
-
-<body>
-	<header>
-	
-	<header>
+            <div class="hamburger-nav">
+                    <label for="toggle">&#9776;</label>
+                    <input type="checkbox" id="toggle"/>
+                    <div class="menu">
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li>Brands
+                                <ul>
+                                    <li><a href="sedan.html">Sedan Vehicles</a></li>
+                                    <li><a href="offroad.html">Off Road Vehicles</a></li>
+                                    <li><a href="pickup.html">Pickup Vehicles</a></li>
+                                    <li><a href="sports.html">Sports Vehicle</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="active"  href="enquiry.html">Enquire</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                        </ul>
+                    </div>
+            </div>
+        </nav>
+        </header>
