--- a/enquiry.html
+++ b/enquiry.html
@@ -194,7 +194,7 @@
             </div>
                     
             <div id="copyright">
-                <p>&#169;2019 Kiwano | <a href="disclaimer.html">Disclaimer</a> | Last Updated: 7/4/2019</p>
+                <p>&#169;2019  | <a href="disclaimer.html">Disclaimer</a> | Last Updated: 7/4/2019</p>
             </div>
             
         </footer>
