--- a/enquiry.html
+++ b/enquiry.html
@@ -114,26 +114,27 @@
                                         <select name="car_model" id="car_model">
                                         <option>-Choose One-</option>
                                         <optgroup label="Sedan">
-                                            <option value="Yeezy True Form">Yeezy True Form</option>
-                                            <option value="Yeezy Wave Runner">Yeezy Wave Runner</option>
-                                            <option value="NMD SOLAR HU CNY">NMD Solar Hu CNY</option>
-                                            <option value="BAPE Ultraboost">Bape Ultraboost</option>
-                                            <option value="Pharell CNY Gold">Pharell CNY Gold</option>
-                                            <option value="Future Craft">Future Craft</option>
+                                            <option value=""></option>
                                         </optgroup>
-                                        <optgroup label="Offroad">
-                                            <option value="Levi's Air Jordan 4">Levi's Air Jordan 4</option>
-                                            <option value="AJ1 OFF-White Chicago">AJ1 OFF-White Chicago</option>
-                                            <option value="Air Max 1/97 Sean Wotherspoon">Air Max 1/97 Sean Wotherspoon</option>
-                                            <option value="AJ4 Travis Scott">AJ4 Travis Scott</option>
-                                            <option value="Air Yeezy 2 Red Octobers">Air Yeezy 2 Red Octobers</option>
-                                            <option value="AJ13 Terracotta Warrior">AJ13 Terracotta Warrior</option>
+                                        <optgroup label="Off-Road">
+                                            <option value=""></option>
+                                            <option value=""></option>
+                                            <option value=""></option>
+                                            <option value=""></option>
+                                            <option value=""></option>
                                         </optgroup>
                                         <optgroup label="Pickup">
                                             <option value=""></option>
                                             <option value=""></option>
+                                            <option value=""></option>
+                                            <option value=""></option>
+                                            <option value=""></option>                         
                                         </optgroup>
                                         <optgroup label="Sports">
+                                            <option value=""></option>
+                                            <option value=""></option>
+                                            <option value=""></option>
+                                            <option value=""></option>
                                             <option value=""></option>
                                         </optgroup>
                                         </select>
