--- a/enquiry.html
+++ b/enquiry.html
@@ -114,7 +114,11 @@
                                         <select name="car_model" id="car_model">
                                         <option>-Choose One-</option>
                                         <optgroup label="Sedan">
-                                            <option value=""></option>
+					    <option value=" Honda Civic (2019)">Honda Civic (2019)</option>
+				            <option value="Mazda 3">Mazda 3</option>
+					    <option value="Mercedes Benz C Class">Mercedes Benz C Class</option>
+					    <option value="Toyota Camry (2019)">Toyota Camry (2019)</option>
+					    <option value="Nissan Maxima">Nissan Maxima</option>
                                         </optgroup>
                                         <optgroup label="Off-Road">
                                             <option value=""></option>
