--- a/enquiry.html
+++ b/enquiry.html
@@ -9,7 +9,7 @@
     <body>
     <header>
         <nav>
-            <a href="index.html"><img src="images" alt="HypeCenter logo"/></a>
+            <a href="index.html"><img src="images" alt=""/></a>
 
             <div class="hamburger-nav">
                     <label for="toggle">&#9776;</label>
